Fix sidebar left layout on Mobile

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,3 +1,1 @@
-.waboot-inbox tr.loading {
-  background-color: #ccc;
-}
+.waboot-inbox tr.loading{background-color:#ccc}
